<resources>
    <string name="app_name">AppComponentes</string>
    <string name="valTitulo">REGISTRO DE PERSONAS</string>
    <string name="etNombre">Ingrese su nombre</string>
    <string name="etApellido">Ingrese su apellido</string>
    <string name="valGenero">Seleccione su genero</string>
    <string name="valMasculino">Masculino</string>
    <string name="valFemenino">Femenino</string>
    <string name="valEstado">Estado civil</string>
    <string name="valPreferencia">Seleccione su preferencia</string>
    <string name="valDibujo">Dibujo</string>
    <string name="valCine">Cine</string>
    <string name="valDeporte">Deporte</string>
    <string name="valNotificar">Notificar por Email</string>
    <string name="valRegistro">Guardar</string>
    <string name="valListar">LISTAR PERSONAS REGISTRADAS</string>
    <string name="errorNombreApellido">El nombre  y el apellido son requeridos</string>
    <string name="errorGenero">El genero es requerido</string>
    <string name="errorPreferencia">La preferencia es requerida</string>
    <string name="errorEstadoCivil">El estado civil es requerido</string>
    <string name="errorNombre">El nombre es requerido</string>
    <string name="errorApellido">El apellido es requerido</string>
    <string name="valTituloLista">LISTADO DE PERSONAS</string>
</resources>